readme updated and work in progress file system

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "player.h": "c",
     "styles.h": "c",
     "pokemon.h": "c",
-    "stdbool.h": "c"
+    "stdbool.h": "c",
+    "gui.h": "c"
   }
 }
