IMPLEMENTED FILE SYSTEM WOOHOO !!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
     "styles.h": "c",
     "pokemon.h": "c",
     "stdbool.h": "c",
-    "gui.h": "c"
+    "gui.h": "c",
+    "typeinfo": "c",
+    "file.h": "c"
   }
 }
